[gd_scene load_steps=9 format=3 uid="uid://crhb4txnxvfc5"]

[ext_resource type="Script" path="res://prefabs/main_screen.gd" id="1_2iu5s"]
[ext_resource type="Script" path="res://prefabs/pet_selection.gd" id="1_653s6"]
[ext_resource type="Texture2D" uid="uid://bd2x4ndt14o8k" path="res://assets/Greybox/bg1.jpg" id="2_e52l1"]
[ext_resource type="Texture2D" uid="uid://buxbn0lcsfvtv" path="res://assets/GUI/LongButton.png" id="3_d3loh"]
[ext_resource type="Texture2D" uid="uid://drn3q08dugank" path="res://assets/Pets/Turtle_1.png" id="3_qoae2"]
[ext_resource type="Texture2D" uid="uid://bi4ckd8k5gguj" path="res://assets/GUI/SimpleButton.png" id="5_rlqcv"]

[sub_resource type="LabelSettings" id="LabelSettings_5shdn"]
font_size = 64

[sub_resource type="LabelSettings" id="LabelSettings_06xn4"]
font_size = 40

[node name="MainScreen" type="Node2D"]
script = ExtResource("1_2iu5s")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -81.0
offset_bottom = 55.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_e52l1")

[node name="PetSelection" type="Control" parent="CanvasLayer/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_653s6")

[node name="PreviousPetButton" type="TextureButton" parent="CanvasLayer/Control/PetSelection"]
self_modulate = Color(0.803922, 0.505882, 0.305882, 1)
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_left = -29.0
offset_top = 24.0
offset_right = 81.0
offset_bottom = -24.0
grow_vertical = 2
texture_normal = ExtResource("3_d3loh")
ignore_texture_size = true
stretch_mode = 0

[node name="Label" type="Label" parent="CanvasLayer/Control/PetSelection/PreviousPetButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "<"
label_settings = SubResource("LabelSettings_5shdn")
horizontal_alignment = 1
vertical_alignment = 1

[node name="NextPetButton" type="TextureButton" parent="CanvasLayer/Control/PetSelection"]
self_modulate = Color(0.803922, 0.505882, 0.305882, 1)
layout_mode = 1
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -80.0
offset_top = 24.0
offset_right = 30.0
offset_bottom = -24.0
grow_horizontal = 0
grow_vertical = 2
texture_normal = ExtResource("3_d3loh")
ignore_texture_size = true
stretch_mode = 0

[node name="Label" type="Label" parent="CanvasLayer/Control/PetSelection/NextPetButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = ">"
label_settings = SubResource("LabelSettings_5shdn")
horizontal_alignment = 1
vertical_alignment = 1

[node name="SelectedPet" type="TextureRect" parent="CanvasLayer/Control/PetSelection"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -60.0
offset_top = -58.0
offset_right = -20.0
offset_bottom = -18.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(3, 3)
texture = ExtResource("3_qoae2")

[node name="StartButton" type="TextureButton" parent="CanvasLayer/Control"]
self_modulate = Color(0.387839, 0.662656, 0.297521, 1)
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -150.0
offset_top = -99.3
offset_right = 150.0
offset_bottom = 200.7
grow_horizontal = 2
grow_vertical = 0
texture_normal = ExtResource("5_rlqcv")
ignore_texture_size = true
stretch_mode = 0

[node name="Label" type="Label" parent="CanvasLayer/Control/StartButton"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 110.0
grow_horizontal = 2
text = "START"
label_settings = SubResource("LabelSettings_06xn4")
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="CanvasLayer/Control/PetSelection/PreviousPetButton" to="CanvasLayer/Control/PetSelection" method="_on_previous_pet_button_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/PetSelection/NextPetButton" to="CanvasLayer/Control/PetSelection" method="_on_next_pet_button_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/StartButton" to="." method="_on_start_button_pressed"]
